--- a/programs/constant-swap/Cargo.toml
+++ b/programs/constant-swap/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "solana_constant_swap"
+name = "constant_swap"
 
 [features]
 no-entrypoint = []
@@ -17,3 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.27.0"
+anchor-spl = "0.27.0"
+solana-program = "1.14.17"
