--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,15 +1,15 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-solana_constant_swap = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.devnet]
+constant_swap = "9TAK4Mjf9HXAAjtQqr4gkzA7nbbTikWMVK4zXoKZTTFC"
 
 [registry]
-url = "https://api.apr.dev"
+url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "Localnet"
-wallet = "/Users/phongvu/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/Users/phongvu/.config/solana/phantom-3.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
